# aoc2023

./: .env  .gitignore  Cargo.toml  README.md  criterion.toml  dot-env.example
.git-crypt/: .gitattributes
.git-crypt/keys/default/0/: 0A176E3F94FDA2B8A83B9F0EB9A74A073A4F73ED.gpg  D36299573E4E44D3069313253C093A8AA4C87531.gpg
benches/: criterion.rs
criterion/data/main/day01/get_input/: benchmark.cbor  measurement_221206141115.cbor  measurement_221206141557.cbor
criterion/data/main/day01/part1/: benchmark.cbor  measurement_221206141125.cbor  measurement_221206141609.cbor
criterion/data/main/day01/part2/: benchmark.cbor  measurement_221206141137.cbor  measurement_221206141622.cbor
criterion/data/main/day02/get_input/: benchmark.cbor  measurement_221206141146.cbor  measurement_221206141633.cbor
criterion/data/main/day02/part1/: benchmark.cbor  measurement_221206141156.cbor  measurement_221206141645.cbor
criterion/data/main/day02/part2/: benchmark.cbor  measurement_221206141207.cbor  measurement_221206141656.cbor
criterion/data/main/day03/get_input/: benchmark.cbor  measurement_221206141217.cbor  measurement_221206141707.cbor
criterion/data/main/day03/part1/: benchmark.cbor  measurement_221206141228.cbor  measurement_221206141718.cbor
criterion/data/main/day03/part2/: benchmark.cbor  measurement_221206141241.cbor  measurement_221206141730.cbor
criterion/data/main/day04/get_input/: benchmark.cbor  measurement_221206141252.cbor  measurement_221206141742.cbor
criterion/reports/: index.html
criterion/reports/day01/: index.html
criterion/reports/day01/get_input/: history.html  index.html
criterion/reports/day01/part1/: history.html  index.html
criterion/reports/day01/part2/: history.html  index.html
criterion/reports/day02/: index.html
criterion/reports/day02/get_input/: history.html  index.html
criterion/reports/day02/part1/: history.html  index.html
criterion/reports/day02/part2/: history.html  index.html
criterion/reports/day03/: index.html
criterion/reports/day03/get_input/: history.html  index.html
criterion/reports/day03/part1/: history.html  index.html
criterion/reports/day03/part2/: history.html  index.html
criterion/reports/day04/: index.html
criterion/reports/day04/get_input/: history.html  index.html
criterion/reports/day04/part1/: history.html  index.html
criterion/reports/day04/part2/: history.html  index.html
criterion/reports/day05/: index.html
criterion/reports/day05/get_input/: history.html  index.html
criterion/reports/day05/part1/: history.html  index.html
criterion/reports/day05/part2/: history.html  index.html
criterion/reports/day06/: index.html
criterion/reports/day06/get_input/: history.html  index.html
criterion/reports/day06/part1/: history.html  index.html
criterion/reports/day06/part2/: history.html  index.html
criterion/reports/day07/: index.html
criterion/reports/day07/get_input/: history.html  index.html
criterion/reports/day07/part1/: history.html  index.html
criterion/reports/day07/part2/: history.html  index.html
criterion/reports/day08/: index.html
criterion/reports/day08/get_input/: history.html  index.html
criterion/reports/day08/part1/: history.html  index.html
criterion/reports/day08/part2/: history.html  index.html
src/: lib.rs  main.rs  parsers.rs  utils.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: ]  mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day16/: mod.rs
src/day17/: mod.rs
src/day18/: mod.rs
src/day20/: mod.rs
src/day21/: mod.rs
src/template/: mod.rs
src/utils/: top.rs
(+48 files in other folders)
