[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
byte_set = "0.1.3"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
fern = { version = "0.6.1", features = ["colored"] }
hash32 = "0.2.1"
hash32-derive = "0.1.1"
heapless = "0.7.16"
home = "0.5.4"
id_tree = "1.8.0"
itertools = "0.10.5"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
mimalloc = { version = "0.1.32", default-features = false }
multiset = "0.0.5"
ndarray = { version = "0.15.6", features = ["rayon"] }
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"
num = "0.4.0"
once_cell = "1.16.0"
petgraph = "0.6.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
thiserror = "1.0.37"
tracking-allocator = "0.4.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
pprof = { version = "0.6.1", features = ["flamegraph", "criterion"] }

[[bench]]
name = "criterion"
harness = false
# required_features = ["disable_for_tests"]

[profile.release]
opt-level = 3
debug = 1
incremental = true

[profile.bench]
opt-level = 3
debug=true
lto = "thin"

[features]
day06_ring = []
disable_for_tests = []
